force-app/main/default/objects/LiveMessage__c/LiveMessage__c.object-meta.xml
<CustomObject>
    <label>LiveMessage</label>
    <nameField>
        <displayFormat>SMS-{0000000}</displayFormat>
        <label>LiveMessages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveMessages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>