force-app/main/default/objects/LiveMessage__c/fields/Claim_For_Role__c.field-meta.xml
<CustomField>
    <fullName>Claim_For_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim For Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>