force-app/main/default/objects/LiveMessage__c/fields/Communication_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Communication_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Configuration</label>
    <referenceTo>Communication_Configuration__c</referenceTo>
    <relationshipLabel>LiveMessages</relationshipLabel>
    <relationshipName>LiveMessages</relationshipName>
    <type>Lookup</type>
</CustomField>