force-app/main/default/objects/LiveMessage__c/fields/Exposure_For_Role__c.field-meta.xml
<CustomField>
    <fullName>Exposure_For_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exposure For Role</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>LiveMessages (Exposure For Role)</relationshipLabel>
    <relationshipName>LiveMessages1</relationshipName>
    <type>Lookup</type>
</CustomField>