force-app/main/default/objects/LiveMessage__c/fields/Exposure_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exposure Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>