force-app/main/default/objects/LiveMessage__c/fields/Feed_Communication_Name__c.field-meta.xml
<CustomField>
    <fullName>Feed_Communication_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feed Communication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>