force-app/main/default/objects/LiveMessage__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Message Text</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>