force-app/main/default/objects/LiveMessage__c/fields/Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>LiveMessages</relationshipLabel>
    <relationshipName>LiveMessages</relationshipName>
    <type>Lookup</type>
</CustomField>