force-app/main/default/objects/LiveMessage__c/fields/Parent_Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Integration Log</label>
    <referenceTo>Application_Log__c</referenceTo>
    <relationshipLabel>LiveMessages</relationshipLabel>
    <relationshipName>LiveMessages</relationshipName>
    <type>Lookup</type>
</CustomField>