force-app/main/default/objects/LiveMessage__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>