force-app/main/default/objects/LiveMessage__c/fields/Recipient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>