force-app/main/default/objects/LiveMessage__c/recordTypes/Automatic_Notification.recordType-meta.xml
<RecordType>
    <fullName>Automatic_Notification</fullName>
    <active>true</active>
    <description>Automatic, one way sms-es sent by a 3rd party (ex webtext)</description>
    <label>Automatic Notification</label>
</RecordType>