force-app/main/default/objects/LiveMessage__c/recordTypes/Two_Way.recordType-meta.xml
<RecordType>
    <fullName>Two_Way</fullName>
    <active>true</active>
    <description>Two way records with a live exchange between agents and customers</description>
    <label>Two Way</label>
</RecordType>